--- a/einstein/.gitignore
+++ b/einstein/.gitignore
@@ -2,6 +2,6 @@
 *.pyc
 .project
 .pydevproject
-einsteinMSG.txt
+einstein/einsteinMSG.txt
 .settings/org.eclipse.core.resources.prefs
 einstein/.gitignore
