--- a/einstein/GUI/einstein.ini
+++ b/einstein/GUI/einstein.ini
@@ -7,4 +7,4 @@ DBHost:localhost
 DBPass:root
 MYSQLBIN:C:\Program Files\MySQL\MySQL Server 5.1\bin
 DBUser:root
-DBName:einstein
+DBName:einstein_hxtest
