--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,4 @@
-#Tue Oct 19 17:10:18 CEST 2010
+#Wed Oct 20 01:32:55 CEST 2010
 eclipse.preferences.version=1
 encoding//einstein/GUI/HelperClass.py=cp1252
 encoding//einstein/GUI/dialogDatabase.py=iso-8859-15
@@ -6,6 +6,7 @@ encoding//einstein/GUI/panelHR.py=UTF-8
 encoding//einstein/GUI/panelQ3.py=utf-8
 encoding//einstein/GUI/panelQ6.py=iso-8859-15
 encoding//einstein/GUI/status.py=cp1252
+encoding//einstein/modules/control.py=cp1252
 encoding//einstein/modules/interfaces.py=utf-8
 encoding//einstein/modules/moduleHR.py=cp1252
 encoding//einstein/modules/modules.py=cp1252
